custom workout and user settings and styling (kinda)

--- a/Start.html
+++ b/Start.html
@@ -9,17 +9,15 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="CSS/fit.css">
+<link rel="stylesheet" type="text/css" href="fit.css">
 <link rel="stylesheet" type="text/css" href="CSS/global.css">
 <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="JS/Start.js"></script>
 </head>
-<body>
+<body onload="parseURL()">
 <div class="container-fluid">
 	<h1 class="logo">(F)it</h1>
-	<a class="btn btn-primary btn-large btn-sizer" href="WorkoutOption.html">Start Workout</a>
-	<br/ >
-	<br/ >
-	<a class="btn btn-primary btn-large btn-sizer" href="UserSettings.html">User Settings</a>
+	
 </div>
 
 </body>
