--- a/WorkoutOption.html
+++ b/WorkoutOption.html
@@ -16,10 +16,18 @@
 <body>
 <div class="container-fluid">
 	<h1 class="logo">(F)it</h1>
-	<a class="btn btn-primary btn-large btn-sizer" href="WorkoutOption.html">Start Workout</a>
+	<div class="row">
+	<a class="btn btn-primary btn-large btn-sizer">Continue Last Workout</a>
 	<br/ >
 	<br/ >
-	<a class="btn btn-primary btn-large btn-sizer" href="UserSettings.html">User Settings</a>
+	<a class="btn btn-primary btn-large btn-sizer">Random Workout</a>
+	<br/ >
+	<br/ >
+	<a class="btn btn-primary btn-large btn-sizer" href="CustomWorkout.html">Custom Workout</a>
+	<br/>
+	<br/>
+	<a class="btn btn-primary btn-large btn-sizer" href="index.html">Back</a>
+	</div>
 </div>
 
 </body>
