--- a/Start.html
+++ b/Start.html
@@ -9,7 +9,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-<link rel="stylesheet" type="text/css" href="fit.css">
+<link rel="stylesheet" type="text/css" href="CSS/fit.css">
 <link rel="stylesheet" type="text/css" href="CSS/global.css">
 <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="JS/Start.js"></script>
