--- a/EditSettings.html
+++ b/EditSettings.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="CSS/fit.css">
 <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="CSS/global.css">
+<script src="JS/editSettings.js"></script>
 
 </head>
 <body>
@@ -25,8 +26,8 @@
 			  <label class="col-md-4 control-label" for="gender">Gender</label>
 			  <div class="col-md-4">
 			    <select id="gender" name="gender" class="form-control">
-			      <option value="male">Male</option>
-			      <option value="female">Female</option>
+			      <option value="Male">Male</option>
+			      <option value="Female">Female</option>
 			    </select>
 			  </div>
 			</div>
@@ -63,11 +64,11 @@
 			  <label class="col-md-4 control-label" for="fitnessLevel">Fitness Level</label>
 			  <div class="col-md-4">
 			    <select id="fitnessLevel" name="fitnessLevel" class="form-control">
-			      <option value="1">Beginner</option>
-			      <option value="2">Novice</option>
-			      <option value="3">Intermediate</option>
-			      <option value="4">Expert</option>
-			      <option value="5">AB CRUSHER</option>
+			      <option value="Beginner">Beginner</option>
+			      <option value="Novice">Novice</option>
+			      <option value="Intermediate">Intermediate</option>
+			      <option value="Expert">Expert</option>
+			      <option value="AB CRUSHER">AB CRUSHER</option>
 			    </select>
 			  </div>
 			</div>
@@ -76,7 +77,7 @@
 	</form>
 	<br />
 
-	<a id="editButton" class="btn btn-primary btn-large btn-sizer" href="UserSettings.html">Save</a>
+	<button id="editButton" class="btn btn-primary btn-large btn-sizer" onclick="save()">Save</a>
 
 </div>
 
