--- a/UserSettings.html
+++ b/UserSettings.html
@@ -12,9 +12,10 @@
 <link rel="stylesheet" type="text/css" href="CSS/fit.css">
 <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="CSS/global.css">
+<script src="JS/UserSettings.js"></script>
 
 </head>
-<body>
+<body onload="parseURL()">
 <div class="container-fluid">
 	<h1 class="logo">(F)it</h1>
 
