--- a/Start.html
+++ b/Start.html
@@ -11,12 +11,17 @@
 
 <link rel="stylesheet" type="text/css" href="CSS/fit.css">
 <link rel="stylesheet" type="text/css" href="CSS/global.css">
+<link rel="stylesheet" type="text/css" href="CSS/start.css">
 <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 <script type="text/javascript" src="JS/Start.js"></script>
 </head>
 <body onload="parseURL()">
 <div class="container-fluid">
 	<h1 class="logo">(F)it</h1>
+	<h3 id="title">Decline seated bicep curls</h3>
+	<p style="text-align:center;"><img id="gif" src="../Images/decline_seated_bicep_curls.gif" width="200" height="200"></p>
+	<a id="endButton" class="btn btn-primary btn-large btn-sizer-row" href="WorkoutOption.html">End</a>
+	<a id="nextButton" class="btn btn-primary btn-large btn-sizer-row" onclick="next()">Skip</a>
 	
 </div>
 
