workout page shows exercises and gifs and takes info from custom workout and has timer and etc

--- a/Done.html
+++ b/Done.html
@@ -11,23 +11,15 @@
 
 <link rel="stylesheet" type="text/css" href="CSS/fit.css">
 <link rel="stylesheet" type="text/css" href="CSS/global.css">
+<link rel="stylesheet" type="text/css" href="CSS/start.css">
 <link href='http://fonts.googleapis.com/css?family=Fredoka+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="container-fluid">
 	<h1 class="logo">(F)it</h1>
-	<div class="row">
-	<a class="btn btn-primary btn-large btn-sizer" href="Start.html">Continue Last Workout</a>
-	<br/ >
-	<br/ >
-	<a class="btn btn-primary btn-large btn-sizer" href="Start.html">Random Workout</a>
-	<br/ >
-	<br/ >
-	<a class="btn btn-primary btn-large btn-sizer" href="CustomWorkout.html">Custom Workout</a>
-	<br/>
-	<br/>
-	<a class="btn btn-primary btn-large btn-sizer" href="index.html">Back</a>
-	</div>
+	<h3 id="title">You're Done!</h3>
+	<a id="endButton" class="btn btn-primary btn-large btn-sizer" href="WorkoutOption.html">End</a>
+	
 </div>
 
 </body>
